kubernetes/apps/talos1018/podinfo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/icon: sh-kubernetes
    gethomepage.dev/name: Podinfo
    gethomepage.dev/app: podinfo
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "podinfo.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: podinfo
          port: 9898
